transaction-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-shop
  labels:
    name: event-shop
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: event-shop-ingress
  namespace: event-shop
spec:
  rules:
    - host: eventshop.dev
      http:
        paths:
          - path: /(products/.*)
            pathType: Prefix
            backend:
              service:
                name: transaction-products-service
                port:
                  number: 80
          - path: /(cart/.*)
            pathType: Prefix
            backend:
              service:
                name: transaction-cart-service
                port:
                  number: 80
          - path: /(order/.*)
            pathType: Prefix
            backend:
              service:
                name: transaction-order-service
                port:
                  number: 80
